--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+platform :ios, '10.0'
+
 def common_pods
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
