--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@viro-community/react-viro",
+  "name": "react-native-viro",
   "main": "index.js",
   "version": "2.20.2",
   "license": "MIT",
