--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-viro",
+  "name": "@arifo/react-viro",
   "main": "index.js",
   "version": "2.20.0",
   "license": "MIT",
